--- a/package.json
+++ b/package.json
@@ -4,11 +4,32 @@
         "dev": "vite",
         "build": "vite build"
     },
+    "license": "MIT",
+  "main": "index.html",
+  "scripts": {
+    "start": "browser-sync start --server --index \"./index.html\"",
+    "build:tailwind": "tailwind build assets/styles/index.css -o assets/styles/tailwind.css",
+    "build:fontawesome": "mkdir -p assets/vendor/@fortawesome/fontawesome-free/webfonts && mkdir -p assets/vendor/@fortawesome/fontawesome-free/css && cp -a ./node_modules/@fortawesome/fontawesome-free/webfonts assets/vendor/@fortawesome/fontawesome-free/ && cp ./node_modules/@fortawesome/fontawesome-free/css/all.min.css assets/vendor/@fortawesome/fontawesome-free/css/all.min.css",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run build:fontawesome && npm start"
+  },
+  "keywords": [],
+  "author": "Vinsmart Technologies",
+  "bugs": {
+    "url": "https://github.com/iamChethan/homeservice"
+  },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^4.0.0"
-    }
+        "vite": "^4.0.0",
+         "@fortawesome/fontawesome-free": "5.15.3",
+        "@tailwindcss/forms": "0.2.1",
+        "browser-sync": "2.26.14",
+        "tailwindcss": "2.0.4"
+    },
+    "devDependencies": {
+    "autoprefixer": "10.2.5",
+    "postcss": "8.2.8"
+  }
 }
